[package]
name = "tfhe-trivium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { path = "../../tfhe", features = [ "boolean", "shortint", "integer", "x86_64-unix" ] }
rayon = { version = "1.7.0"}

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ]}

[[bench]]
name = "trivium"
harness = false