[package]
name = "tfhe-cuda-common"
version = "0.1.0"
edition = "2021"
authors = ["Zama team"]
license = "BSD-3-Clause-Clear"
description = "Shared CUDA device utilities for tfhe-rs backends."
homepage = "https://www.zama.org/"
documentation = "https://docs.zama.org/tfhe-rs"
repository = "https://github.com/zama-ai/tfhe-rs"
keywords = ["cuda", "gpu", "fhe", "cryptography"]
links = "tfhe_cuda_common"
rust-version.workspace = true

[build-dependencies]
cmake.workspace = true
pkg-config.workspace = true

[features]
profile = []
debug = []
