[package]
name = "zk-cuda-backend"
version = "0.1.0"
edition = "2021"
authors = ["Zama team"]
license = "BSD-3-Clause-Clear"
description = "Cuda implementation of TFHE-rs' ZK primitives."
homepage = "https://www.zama.ai/"
documentation = "https://docs.zama.ai/tfhe-rs"
repository = "https://github.com/zama-ai/tfhe-rs"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[lib]
name = "zk_cuda_backend"
crate-type = ["rlib"]

[dependencies]
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
tfhe-cuda-backend = { path = "../tfhe-cuda-backend" }

[features]
default = []
validate_points = []  # Enable on-curve validation for points

[build-dependencies]
cc = "1.2.46"
