[package]
name = "zk-cuda-backend"
version = "0.1.0"
edition = "2021"
authors = ["Zama team"]
license = "BSD-3-Clause-Clear"
description = "Cuda implementation of TFHE-rs' ZK primitives."
homepage = "https://www.zama.ai/"
documentation = "https://docs.zama.ai/tfhe-rs"
repository = "https://github.com/zama-ai/tfhe-rs"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[lib]
name = "zk_cuda_backend"
crate-type = ["rlib"]

[build-dependencies]
cmake = { version = "0.1" }
pkg-config = { version = "0.3" }
bindgen = "0.71"

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
tfhe-cuda-backend = { path = "../tfhe-cuda-backend" }

[features]
default = []
validate_points = []  # Enable on-curve validation for points
