[package]
name = "tfhe-safe-serialization"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Safe serialization primitives used in the TFHE-rs library."
homepage = "https://zama.ai/"
documentation.workspace = true
repository.workspace = true
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]
rust-version = "1.72"

[dependencies]
bincode = "1.3.3"
serde = { workspace = true, features = ["default", "derive"] }

tfhe-versionable = { version = "0.3.2", path = "../tfhe-versionable" }

[lints]
workspace = true
