[package]
name = "hpu-sim"
version = "0.1.0"
edition = "2021"
authors = ["Zama Hardware team"]
readme = "README.md"

[features]
default = []

[dependencies]
tfhe = { path= "../../tfhe", features = ["shortint", "seeder_unix", "x86_64-unix", "ntt-bnf", "hpu", "seeder-manual"] }

ipc-channel = "0.18.3"
hw_regmap = {git = "ssh://git@github.com/zama-ai/hw_regmap.git", branch="main"}

clap = { version = "3.2.1", features = ["derive"] }
clap-num = "*"
anyhow = "1.0.82"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0"
rand = "0.8.5"
ron = "*"
serde = { version = "1", features = ["derive"] }

# [[bin]]
# name = "config_gen"
# path = "src/config_gen.rs"
# required-features = []

[[bin]]
name = "hpu_mockup"
path = "src/mockup.rs"
required-features = []

