[package]
name = "tfhe-hpu-mockup"
version = "0.1.0"
edition = "2021"
authors = ["Zama Hardware team"]
license = "BSD-3-Clause-Clear"
description = "Simulation model of HPU hardware."
readme = "README.md"

[features]
default = []
isc-order-check = []

[dependencies]
tfhe = { path = "../../tfhe", features = ["hpu", "hpu-debug"] }

ipc-channel = "0.18.3"

bytemuck = { workspace = true }

clap = { version = "4.4.4", features = ["derive"] }
clap-num = "*"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "hpu_mockup"
path = "src/mockup.rs"
required-features = []
